# AiMem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  aimem_main.py  pyproject.toml
aimem/: __init__.py  cli.py  compression.py  context_manager.py  models.py  storage.py  tui.py
aimem/adapters/: __init__.py  aider.py  antigravity.py  claude.py  clipboard.py  codex.py  continue_dev.py  cursor.py  gemini.py  opencode.py  qwen.py
aimem/adapters/output/: __init__.py
