[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimem-cli"
version = "0.2.3"
description = "AI Memory Switcher — Save, compress, and transfer context between AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AiMem Project", email = "aimem@example.com"}
]
keywords = ["ai", "claude", "gemini", "qwen", "opencode", "context", "transfer", "memory", "switcher", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

urls = { Homepage = "https://github.com/ThangTo/AiMem", Repository = "https://github.com/ThangTo/AiMem" }

dependencies = [
    "pyperclip>=1.8.0",
    "ulid-py>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
redis = [
    "redis>=4.0",
]

[tool.setuptools.packages.find]
include = ["aimem*"]
exclude = ["assets*"]

[project.scripts]
aimem-cli = "aimem.cli:main"